# CADGrasp

./: .gitignore  .gitmodules  README-backup.md  README.md  pyproject.toml
.github/: copilot-instructions.md
Dex2Evaluator/: new_predict.py  predict.yaml
Dex2Evaluator/conf/: predict.yaml
Dex2Evaluator/robot_models/: combined_PointCloud.xml
Dex2Evaluator/src/eval/: new_predict.py
Dex2Evaluator/src/utils/: robot_info.py  robot_model.py
Dex2Evaluator/src/utils/data_evaluator/: data_evaluator.py  simulation_evaluator.py
Dex2Evaluator/src/utils/simulator/: isaacgym_simulator.py
IBSGrasp/conf/: eval.yaml  ibs.yaml  scene.yaml
IBSGrasp/graspdata/scene_0055/: success_grasps.npz
IBSGrasp/scripts/: annotate_ibs_for_view.py  batch_cal_ibs.py  batch_eval_grasps.py  calculate_ibs.py  evaluate_grasps.py  scene.py
LASDiffusion/: count_data.py  generate.py  train.py  train.sh  train_scaling_100.sh
LASDiffusion/network/: data_loader.py  model.py  model_trainer.py  model_utils.py  unet.py
LASDiffusion/utils/: mesh_utils.py  utils.py  visualize_ibs_vox.py
PoseOptimize/configs/: isaac.yaml
PoseOptimize/utils/: AdamOpt.py  HandModel.py  IBSAdam.py  ibs_func.py  utils_hand_meta.py  utils_math.py  visualize.py
configs/: evaluator_predict.yaml
configs/optimizer/: isaac.yaml  optimize.yaml
experiment_bashes/: ablation_no_penetration.sh  ablation_together_contact.sh  ablation_traj_50.sh  cross_embodiment.sh  eval_dex2_90hz.sh  eval_ibs_60hz.sh  main_result.sh  main_result_random.sh  scaling_exp_100_graspnet_dense.sh
new_scripts/: count_grasp_data.py  count_ibs.py  vis_ibs.py
robot_models/meta/leap_hand/: hand_assets_meta.json  palmar_surface_points.xml  palmar_surface_points_new.xml  penetration_keypoints.json
src/: train.py
src/cadgrasp/: paths.py
src/cadgrasp/baseline/eval/: evaluate_dexterous.py  evaluate_dexterous_all.py  predict_dexterous.py  predict_dexterous_all.py  predict_dexterous_baseline.py  print_dexterous_results.py
src/cadgrasp/baseline/network/: cvae.py  diffusion.py  diffusion_sample.py  graspness_sample.py  model.py
src/cadgrasp/baseline/network/backbones/: conv_unet.py
src/cadgrasp/baseline/preprocess/: compute_network_input.py  compute_network_input_all.py  refine_dataset.py
src/cadgrasp/baseline/utils/: collision_checker.py  dataset.py  ik.py  logger.py  pc.py  pose_refine.py  render.py  robot_info.py  robot_model.py  util.py  vis_plotly.py  width_mapper.py
src/cadgrasp/baseline/utils/data_evaluator/: data_evaluator.py  simulation_evaluator.py
src/cadgrasp/baseline/utils/simulator/: isaacgym_simulator.py  simulator.py
src/cadgrasp/ibs/scripts/: README.md  annotate_ibs_for_view.py  batch_calculate_ibs.py  batch_filter_grasps.py  batch_fps_sample_grasps.py  calculate_ibs_new.py  filter_grasps_by_sim.py  fps_sample_grasps.py  load_fps_grasps.py  load_success_grasps.py  scene.py
src/cadgrasp/ibs/utils/: ibs_repr.py  transforms.py
src/cadgrasp/optimizer/: AdamOpt.py  HandModel.py  IBSAdam.py  ibs_func.py  rot6d.py  utils_hand_meta.py  visualize.py
tests/: README.md  count_data.py  test_ibs_filter.py  test_input_data.py  test_optimizer.py  test_overfit.py  vis_fps_grasps.py  vis_ibs.py  vis_ibs_o3d.py  visualize_dex_grasp.py  visualize_dex_pred.py  visualize_scene.py
tests/hand_info/: README.md  __init__.py  palmar_surface_collector.py  visualize_keypoints_gui.py  visualize_keypoints_plotly.py  visualize_keypoints_simple.py
